--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node main.ts",
+    "start": "ts-node main.ts",
     "nodemon": "nodemon main.ts"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "colors": "^1.4.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1",
+    "morgan": "^1.10.0",
+    "ts-jest": "^29.0.1",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^18.7.18",
+    "jest": "^29.0.3",
+    "supertest": "^6.2.4",
+    "tsconfig-paths": "^4.1.0"
+  }
 }
