--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.7.18",
+    "concurrently": "^7.4.0",
     "jest": "^29.0.3",
     "supertest": "^6.2.4",
     "tsconfig-paths": "^4.1.0"
