--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
   },
   "devDependencies": {
     "@types/react": "^18",
+    "autoprefixer": "^10.4.12",
     "bun-framework-next": "^12",
-    "typescript": "latest",
-    "react-refresh": "0.10.0"
+    "postcss": "^8.4.16",
+    "react-refresh": "0.10.0",
+    "tailwindcss": "^3.1.8",
+    "typescript": "latest"
   },
   "module": "index.js"
 }
