--- a/client/package.json
+++ b/client/package.json
@@ -1,20 +1,24 @@
 {
   "name": "client",
-  "version": "0.0.57",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
-    "next": "12.1.3",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-is": "^17.0.2"
+    "next": "12.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18",
-    "autoprefixer": "^10.4.12",
-    "bun-framework-next": "^12",
-    "postcss": "^8.4.16",
-    "react-refresh": "0.10.0",
-    "tailwindcss": "^3.1.8",
-    "typescript": "latest"
-  },
-  "module": "index.js"
+    "@types/node": "18.7.18",
+    "@types/react": "18.0.21",
+    "@types/react-dom": "18.0.6",
+    "eslint": "8.23.1",
+    "eslint-config-next": "12.3.1",
+    "typescript": "4.8.3"
+  }
 }
