--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -15,7 +15,11 @@
     "jsx": "preserve",
     "incremental": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@common/*": ["./src/common/*"],
+      "@components/*": ["./src/components/*"],
+      "@pages/*": ["./pages/*"]
+    }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
