--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,9 @@
     "postcss": "^8.4.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "^3.1.8"
+    "react-hook-form": "^7.36.0",
+    "tailwindcss": "^3.1.8",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "18.7.18",
