--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.3.9",
     "@tanstack/react-query-devtools": "^4.3.9",
     "autoprefixer": "^10.4.12",
+    "axios": "^0.27.2",
     "next": "12.3.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
