--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,13 @@
   "dependencies": {
     "@tanstack/react-query": "^4.3.9",
     "@tanstack/react-query-devtools": "^4.3.9",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "autoprefixer": "^10.4.12",
     "axios": "^0.27.2",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.1",
     "next": "12.3.1",
     "postcss": "^8.4.16",
     "react": "18.2.0",
