--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.0",
+    "react-toastify": "^9.0.8",
     "tailwindcss": "^3.1.8",
     "yup": "^0.32.11"
   },
